kubernetes/common/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: agrobank
  labels:
    app.kubernetes.io/part-of: oxus
